Add portfolio pages

--- a/LisaTidballWebPage/index-2.html
+++ b/LisaTidballWebPage/index-2.html
@@ -25,27 +25,27 @@ text-align: center;
     <a href="favorites.html">Hobbies</a>
 </div>
 <div id="information"><h1 style="text-align:center"> Lisa Tidball</h1>
-<h3 style="text-align:center"> Newark, DE</h3>
+<h3 style="text-align:center"> 6 Candate Ct</h3>
+<h3 style="text-align:center"> Newark, DE, 19711</h3>
 <h3 style="text-align:center"> 859-445-8888</h3>
-<h3 style="text-align:center"> ltidball15@gmail.com</h3>
 </div>
 <div id="list"><ul>
 <li>To be able to create great programs and websites</li>
 <li>To be financially secure</li>
 <li>To assist in family income</li>
 </ul>
-<p> I have been developing mostly websites for four years. I love being able to create beautiful and functioning websites. It has been a great priviledge and honor.</p>
 </div>
 <hr>
 <div id="paragraph">
 
 
-<img src="https://dddweg.by3301.livefilestore.com/y4mrpjFeCSQXsQ21dbNBNoeBMJWQu1Cqlf2uN5z5xveKlQ2Is0glLsfxCBwYQlt9oLJWBwF0MaVOv3rtPBs4nwHqdPdwyq1w9A_B6dRkNwe3Amb4ctD_FjfoBqaCevGtYND-vGwmdwC7e1ahhTEBRS9A-pKulVxZsh2eetLZSVtKvq9uWQATMSZieuVNgqvg8UAvaACrbVG8-njgG4dBaF83Q?width=120&height=360&cropmode=none" alt="picture of me with fountains in the background" align="center"/>  I am currently pursuing a career as a developer.
+<img src="https://dddweg.by3301.livefilestore.com/y4mrpjFeCSQXsQ21dbNBNoeBMJWQu1Cqlf2uN5z5xveKlQ2Is0glLsfxCBwYQlt9oLJWBwF0MaVOv3rtPBs4nwHqdPdwyq1w9A_B6dRkNwe3Amb4ctD_FjfoBqaCevGtYND-vGwmdwC7e1ahhTEBRS9A-pKulVxZsh2eetLZSVtKvq9uWQATMSZieuVNgqvg8UAvaACrbVG8-njgG4dBaF83Q?width=120&height=360&cropmode=none" alt="picture of me with fountains in the background" align="center"/>  I am currently pursuing a college degree and a career as a developer.
 
 </div>
 <div id="footer">
-Copyright @ 2018 Lisa Tidball
+Copyright @ 2017 Lisa Tidball
 
 </div>
 </body>
 </html>
+
