--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Full Stack Developer</title>
+	<title> Front-End Developer</title>
     <link href="aboutme.html" rel="stylesheet" type="text/html"/>
     <link href="favorites.html" rel="stylesheet" type="text/html" />
 <style>
@@ -26,7 +26,6 @@ text-align: center;
 </div>
 <div id="information"><h1 style="text-align:center"> Lisa Tidball</h1>
 <h3 style="text-align:center"> Newark, DE</h3>
-<h3 style="text-align:center"> 859-445-8888</h3>
 <h3 style="text-align:center"> ltidball15@gmail.com</h3>
 </div>
 <div id="list"><ul>
