--- a/aboutme.html
+++ b/aboutme.html
@@ -46,6 +46,12 @@ text-align: center;
 <div id="experience paragraph">
 <p>I have 4 years experience of computer coding. I put together gbccs.com and competition-strategies.com and done other projects saved on <a href="http://www.github.com/li3097">Github.com/li3097.</a></p>
 </div>
+<div id="projects">
+<ul>
+<li><a href="https://li3097.github.io/google_homepage/">Google Homepage</a></li>
+<li><a href="https://li3097.github.io/Rock-Paper-Scissors/">Rock, Paper, Scissors game</a></li>
+</ul>
+</div>
 
 <div id="footer"> Copyright @2018 Lisa Tidball </div>
 </body>
