--- a/aboutme.html
+++ b/aboutme.html
@@ -14,6 +14,9 @@ color: brown;
 #experience{background-color: tan;
 color: white
 }
+#projects{background-color: tan;
+color: white
+}  
 a:link{color: inherit;}
 #footer{background-color: beige;
 color: brown;
