--- a/index.html
+++ b/index.html
@@ -1,51 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title> Full Stack Developer</title>
-    <link href="aboutme.html" rel="stylesheet" type="text/html"/>
-    <link href="favorites.html" rel="stylesheet" type="text/html" />
-<style>
-body{background-color: grey; color: white}
-#nav{background-color:beige;
-color: brown;
-}
-#list{background-color: tan;
-color: white
-}
-#footer{background-color: beige;
-color: brown;
-text-align: center;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <title>Lisa's Portfolio Site</title>
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-<div id="nav">
-	<a href="index.html">Home</a>
-	<a href="aboutme.html">Career</a>
-    <a href="favorites.html">Hobbies</a>
-</div>
-<div id="information"><h1 style="text-align:center"> Lisa Tidball</h1>
-<h3 style="text-align:center"> Newark, DE</h3>
-<h3 style="text-align:center"> 859-445-8888</h3>
-<h3 style="text-align:center"> ltidball15@gmail.com</h3>
-</div>
-<div id="list"><ul>
-<li>To be able to create great programs and websites</li>
-<li>To be financially secure</li>
-<li>To assist in family income</li>
-</ul>
-<p> I have been developing mostly websites for four years. I love being able to create beautiful and functioning websites. It has been a great priviledge and honor.</p>
-</div>
+
+  <header class="d-flex justify-content-center align-items-center" id="nav-home">
+    <div class="p-3 mb-2 text-dark name-and-position-background">
+      <div class="name-and-position">
+        <h1>LISA TIDBALL</h1>
+        <h3>FRONT-END DEVELOPER</h3>
+      </div>
+    </div>
+  </header>
+
+  <nav class="navbar navbar-expand-sm navbar-light sticky">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#nav-home">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#nav-about-me">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#nav-projects">Projects</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div id="nav-about-me">
+    <h2 class="text-center">About me</h2>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <img src="https://dddweg.by3301.livefilestore.com/y4mrpjFeCSQXsQ21dbNBNoeBMJWQu1Cqlf2uN5z5xveKlQ2Is0glLsfxCBwYQlt9oLJWBwF0MaVOv3rtPBs4nwHqdPdwyq1w9A_B6dRkNwe3Amb4ctD_FjfoBqaCevGtYND-vGwmdwC7e1ahhTEBRS9A-pKulVxZsh2eetLZSVtKvq9uWQATMSZieuVNgqvg8UAvaACrbVG8-njgG4dBaF83Q?width=120&height=360&cropmode=none"  class="profile-picture">
+        </div>
+        <div class="col-lg-6">
+          <p>Hello, world! I am a developer from Delaware. I began my journey in the world of computer programming back in January 2014. Since then, I have been passionate about the learning process and creating interactive content. If you would like to work together, be sure to reach out using the contact information at the bottom of the page!</p>
+          <!-- include skill icons -->
+          <div class="row">
+            <i class="fab fa-html5 col-3 fa-3x"></i>
+            <i class="fab fa-css3-alt col-3 fa-3x"></i>
+            <i class="fab fa-js-square col-3 fa-3x"></i>
+            <i class="fab fa-java col-3 fa-3x"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <hr>
-<div id="paragraph">
 
+  <div class="featured-work" id="nav-projects">
+    <h2 class="text-center">Projects</h2>
+    <div class="container">
+      <div class="row">
+       
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://li3097.github.io/google_homepage/">
+            <img src="images/hammerhead.jpg" alt="image of hammerhead shark" class="img-fluid img-thumbnail project-img">
+            <!-- image courtesy of http://sharkfactsforkids.weebly.com/uploads/1/8/6/9/18696762/4272562.jpg?337 -->
+          </a>
+          <p>Google Homepage || September 2018</p>
+          <button onclick="location.href='https://li3097.github.io/google_homepage/'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
 
-<img src="https://dddweg.by3301.livefilestore.com/y4mrpjFeCSQXsQ21dbNBNoeBMJWQu1Cqlf2uN5z5xveKlQ2Is0glLsfxCBwYQlt9oLJWBwF0MaVOv3rtPBs4nwHqdPdwyq1w9A_B6dRkNwe3Amb4ctD_FjfoBqaCevGtYND-vGwmdwC7e1ahhTEBRS9A-pKulVxZsh2eetLZSVtKvq9uWQATMSZieuVNgqvg8UAvaACrbVG8-njgG4dBaF83Q?width=120&height=360&cropmode=none" alt="picture of me with fountains in the background" align="center"/>  I am currently pursuing a career as a developer.
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://li3097.github.io/Dodge_Email/">
+            <img src="images/mockup.png" alt="mockup project image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Email || October 2018</p>
+          <button onclick="location.href='https://li3097.github.io/Dodge_Email/'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-</div>
-<div id="footer">
-Copyright @ 2018 Lisa Tidball
+  <footer>
+    <!-- insert contact information -->
+    <div class="contact-info">
+      <p>Lisa Tidball</p>
+      <a href="tel:+1-484-925-9273">(484) 925-9273</a>
+      <a href="mailto:ltidball15@gmail.com">ltidball15@gmail.com</a>
+    </div>
 
-</div>
+    <!-- insert social media links -->
+    <div class="social-media">
+      <a href="https://www.linkedin.com/in/lisa-tidball-862b0688">
+        <i class="fab fa-linkedin fa-3x"></i>
+      </a>
+
+      <a href="https://github.com/li3097">
+        <i class="fab fa-github fa-3x"></i>
+      </a>
+    </div>
+    <div id="footer">
+        Copyright @ 2018 Lisa Tidball
+     </div>
+
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
