--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <i class="fab fa-html5 col-3 fa-3x"></i>
             <i class="fab fa-css3-alt col-3 fa-3x"></i>
             <i class="fab fa-js-square col-3 fa-3x"></i>
+            <i class="fab fa-php col-3 fa-3x"></i>
             <i class="fab fa-java col-3 fa-3x"></i>
           </div>
         </div>
