Added project pictures

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
           <!-- insert photo as link -->
           <a href="https://li3097.github.io/google_homepage/">
-            <img src="images/hammerhead.jpg" alt="image of hammerhead shark" class="img-fluid img-thumbnail project-img">
+            <img src="google.jpg" alt="image of google" class="img-fluid img-thumbnail project-img">
             <!-- image courtesy of http://sharkfactsforkids.weebly.com/uploads/1/8/6/9/18696762/4272562.jpg?337 -->
           </a>
           <p>Google Homepage || September 2018</p>
@@ -84,7 +84,7 @@
         <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
           <!-- insert photo as link -->
           <a href="https://li3097.github.io/Dodge_Email/">
-            <img src="images/mockup.png" alt="mockup project image" class="img-fluid img-thumbnail project-img">
+            <img src="Dodge_email.jpg" alt="mockup email image" class="img-fluid img-thumbnail project-img">
           </a>
           <p>Email || October 2018</p>
           <button onclick="location.href='https://li3097.github.io/Dodge_Email/'" class="btn btn-primary btn-sm" type="button">See Project</button>
