--- a/index.html
+++ b/index.html
@@ -89,6 +89,60 @@
           <p>Email || October 2018</p>
           <button onclick="location.href='https://li3097.github.io/Dodge_Email/'" class="btn btn-primary btn-sm" type="button">See Project</button>
         </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://codepen.io/li3097/pen/EewoKe">
+            <img src="camping.png" alt="camping image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Camping Website || September 2018</p>
+          <button onclick="location.href='https://codepen.io/li3097/pen/EewoKe'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://codepen.io/li3097/pen/oPoWdY">
+            <img src="Kayaking.png" alt="Kayaking website image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Kayaking || September 2018</p>
+          <button onclick="location.href='https://codepen.io/li3097/pen/oPoWdY'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://codepen.io/li3097/pen/GXQEvy">
+            <img src="Yoga.png" alt="Yoga image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Yoga Website || September 2018</p>
+          <button onclick="location.href='https://codepen.io/li3097/pen/GXQEvy'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://lisatidballportfolio.wordpress.com/">
+            <img src="OldPortfolio.png" alt="OldPortfolio image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Old Wordpress Portfolio || September 2017</p>
+          <button onclick="location.href='https://lisatidballportfolio.wordpress.com/'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="http://leicreativestudio.weebly.com/">
+            <img src="OldWeebly.png" alt="OldWeebly website image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Old Weebly Website || June 2015</p>
+          <button onclick="location.href='http://leicreativestudio.weebly.com/'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
+
+        <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
+          <!-- insert photo as link -->
+          <a href="https://li3097.github.io/Vue_Lesson/">
+            <img src="VueLesson.png" alt="vue image" class="img-fluid img-thumbnail project-img">
+          </a>
+          <p>Vue Practice || October 2018</p>
+          <button onclick="location.href='https://li3097.github.io/Vue_Lesson/'" class="btn btn-primary btn-sm" type="button">See Project</button>
+        </div>
       </div>
     </div>
   </div>
