--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="project-item col-xl-4 col-lg-4 col-md-6 text-center">
           <!-- insert photo as link -->
           <a href="https://li3097.github.io/Vue_Lesson/">
-            <img src="VueLesson.png" alt="vue image" class="img-fluid img-thumbnail project-img">
+            <img src="VueImage.png" alt="vue image" class="img-fluid img-thumbnail project-img">
           </a>
           <p>Vue Practice || October 2018</p>
           <button onclick="location.href='https://li3097.github.io/Vue_Lesson/'" class="btn btn-primary btn-sm" type="button">See Project</button>
